--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "random-words": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.1.2",
     "typescript": "5.0.3"
   },
   "devDependencies": {
